--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "maatwebsite/excel": "^3.1",
-        "yajra/laravel-datatables-oracle": "~9.0"
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
