--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
         "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "maatwebsite/excel": "^3.1"
-    },
+        "maatwebsite/excel": "^3.1",
+		"ext-json": "*"
+	},
     "require-dev": {
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.9.1",
